--- a/data/org.gnome.Example.metainfo.xml.in
+++ b/data/org.gnome.Example.metainfo.xml.in
@@ -4,7 +4,7 @@
   <metadata_license>CC0-1.0</metadata_license>
   <project_license>GPL-3.0-or-later</project_license>
 
-  <name>Gnome-apps-next</name>
+  <name>bazaar</name>
   <summary>Keep the summary shorter, between 10 and 35 characters</summary>
   <description>
     <p>No description</p>
@@ -33,7 +33,7 @@
   <!-- URLs of this type should point to a webpage showing information on how to contribute to the described software project -->
   <url type="contribute">https://example.org/contribute</url>
 
-  <translation type="gettext">gnome-apps-next</translation>
+  <translation type="gettext">bazaar</translation>
   <!-- All graphical applications having a desktop file must have this tag in the MetaInfo.
      If this is present, appstreamcli compose will pull icons, keywords and categories from the desktop file. -->
   <launchable type="desktop-id">org.gnome.Example.desktop</launchable>
