--- a/data/org.gnome.Example.service.in
+++ b/data/org.gnome.Example.service.in
@@ -1,3 +1,3 @@
 [D-BUS Service]
 Name=org.gnome.Example
-Exec=@bindir@/gnome-apps-next --gapplication-service
+Exec=@bindir@/bazaar --gapplication-service
