--- a/meson.build
+++ b/meson.build
@@ -1,4 +1,4 @@
-project('gnome-apps-next', 'c',
+project('bazaar', 'c',
           version: '0.1.0',
     meson_version: '>= 1.0.0',
   default_options: [ 'warning_level=2', 'werror=false', 'c_std=gnu11', ],
@@ -10,7 +10,7 @@ cc = meson.get_compiler('c')
 
 config_h = configuration_data()
 config_h.set_quoted('PACKAGE_VERSION', meson.project_version())
-config_h.set_quoted('GETTEXT_PACKAGE', 'gnome-apps-next')
+config_h.set_quoted('GETTEXT_PACKAGE', 'bazaar')
 config_h.set_quoted('LOCALEDIR', get_option('prefix') / get_option('localedir'))
 configure_file(output: 'config.h', configuration: config_h)
 add_project_arguments(['-I' + meson.project_build_root()], language: 'c')
