--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -4,5 +4,5 @@ data/org.gnome.Example.desktop.in
 data/org.gnome.Example.metainfo.xml.in
 data/org.gnome.Example.gschema.xml
 src/main.c
-src/ga-window.c
-src/ga-window.ui
+src/bz-window.c
+src/bz-window.ui
