refactor(branding): use io.github.kolunmi.bazaar as identifier + add some metadata

--- a/data/io.github.kolunmi.bazaar.desktop.in
+++ b/data/io.github.kolunmi.bazaar.desktop.in
@@ -1,7 +1,7 @@
 [Desktop Entry]
-Name=bazaar
+Name=Bazaar
 Exec=bazaar
-Icon=org.gnome.Example
+Icon=io.github.kolunmi.bazaar
 Terminal=false
 Type=Application
 Categories=Utility;
