Use a new animated progress bar instead of stock GtkProgressBar

--- a/src/meson.build
+++ b/src/meson.build
@@ -17,6 +17,7 @@ bz_sources = [
   'bz-paintable-model.c',
   'bz-share-dialog.c',
   'bz-preferences-dialog.c',
+  'bz-progress-bar.c',
   'bz-error.c',
 ]
 
