--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,8 +1,17 @@
 # List of source files containing translatable strings.
 # Please keep this file sorted alphabetically.
-data/org.gnome.Example.desktop.in
-data/org.gnome.Example.metainfo.xml.in
-data/org.gnome.Example.gschema.xml
-src/main.c
+data/io.github.kolunmi.bazaar.desktop.in
+data/io.github.kolunmi.bazaar.gschema.xml
+data/io.github.kolunmi.bazaar.metainfo.xml.in
+src/bz-application.c
+src/bz-error.c
+src/bz-preferences-dialog.ui
+src/bz-search-widget.ui
+src/bz-share-dialog.ui
+src/bz-transaction-manager.c
+src/bz-transaction-view.ui
+src/bz-transaction.c
+src/bz-update-dialog.ui
 src/bz-window.c
 src/bz-window.ui
+src/main.c
