ContentSection: changes and improvements to banner handling

--- a/src/meson.build
+++ b/src/meson.build
@@ -1,29 +1,30 @@
 bz_sources = [
-  'main.c',
   'bz-application.c',
-  'bz-window.c',
-  'bz-search-widget.c',
-  'bz-content-section.c',
-  'bz-content-provider.c',
-  'bz-yaml-parser.c',
-  'bz-section-view.c',
-  'bz-browse-widget.c',
-  'bz-update-dialog.c',
-  'bz-background.c',
-  'bz-entry.c',
-  'bz-entry-group.c',
-  'bz-transaction.c',
-  'bz-transaction-view.c',
-  'bz-transaction-manager.c',
+  'bz-async-texture.c',
   'bz-backend.c',
-  'bz-flatpak-instance.c',
+  'bz-background.c',
+  'bz-browse-widget.c',
+  'bz-content-provider.c',
+  'bz-content-section.c',
+  'bz-entry-group.c',
+  'bz-entry.c',
+  'bz-error.c',
   'bz-flatpak-entry.c',
+  'bz-flatpak-instance.c',
   'bz-paintable-model.c',
-  'bz-share-dialog.c',
   'bz-preferences-dialog.c',
   'bz-progress-bar.c',
   'bz-review.c',
-  'bz-error.c',
+  'bz-search-widget.c',
+  'bz-section-view.c',
+  'bz-share-dialog.c',
+  'bz-transaction-manager.c',
+  'bz-transaction-view.c',
+  'bz-transaction.c',
+  'bz-update-dialog.c',
+  'bz-window.c',
+  'bz-yaml-parser.c',
+  'main.c',
 ]
 
 bz_deps = [
