--- a/data/io.github.kolunmi.bazaar.desktop.in
+++ b/data/io.github.kolunmi.bazaar.desktop.in
@@ -1,9 +1,9 @@
 [Desktop Entry]
 Name=Bazaar
-Exec=bazaar
+Exec=bazaar window
 Icon=io.github.kolunmi.bazaar
 Terminal=false
 Type=Application
 Categories=Utility;
-Keywords=GTK;
+Keywords=GTK;System;PackageManager;Discover;Flatpak;Software;Store;
 StartupNotify=true
