add --auto-service option to window command

--- a/data/io.github.kolunmi.bazaar.desktop.in
+++ b/data/io.github.kolunmi.bazaar.desktop.in
@@ -1,6 +1,6 @@
 [Desktop Entry]
 Name=Bazaar
-Exec=bazaar window
+Exec=bazaar window --auto-service
 Icon=io.github.kolunmi.bazaar
 Terminal=false
 Type=Application
