--- a/src/meson.build
+++ b/src/meson.build
@@ -11,10 +11,12 @@ bz_sources = [
   'bz-error.c',
   'bz-flatpak-entry.c',
   'bz-flatpak-instance.c',
+  'bz-full-view.c',
   'bz-paintable-model.c',
   'bz-preferences-dialog.c',
   'bz-progress-bar.c',
   'bz-review.c',
+  'bz-screenshot.c',
   'bz-search-widget.c',
   'bz-section-view.c',
   'bz-share-dialog.c',
