--- a/src/meson.build
+++ b/src/meson.build
@@ -12,9 +12,11 @@ bz_sources = [
   'bz-flatpak-entry.c',
   'bz-flatpak-instance.c',
   'bz-full-view.c',
+  'bz-issue.c',
   'bz-paintable-model.c',
   'bz-preferences-dialog.c',
   'bz-progress-bar.c',
+  'bz-release.c',
   'bz-review.c',
   'bz-screenshot.c',
   'bz-search-widget.c',
