Switch to blueprint for UI design

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -5,13 +5,13 @@ data/io.github.kolunmi.bazaar.gschema.xml
 data/io.github.kolunmi.bazaar.metainfo.xml.in
 src/bz-application.c
 src/bz-error.c
-src/bz-preferences-dialog.ui
-src/bz-search-widget.ui
-src/bz-share-dialog.ui
+src/bz-preferences-dialog.blp
+src/bz-search-widget.blp
+src/bz-share-dialog.blp
 src/bz-transaction-manager.c
-src/bz-transaction-view.ui
+src/bz-transaction-view.blp
 src/bz-transaction.c
-src/bz-update-dialog.ui
+src/bz-update-dialog.blp
 src/bz-window.c
-src/bz-window.ui
+src/bz-window.blp
 src/main.c
