--- a/data/io.github.kolunmi.Bazaar.desktop.in
+++ b/data/io.github.kolunmi.Bazaar.desktop.in
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Name=Bazaar
 Exec=bazaar window --auto-service
-Icon=io.github.kolunmi.bazaar
+Icon=io.github.kolunmi.Bazaar
 Terminal=false
 Type=Application
 Categories=Utility;
