--- a/data/io.github.kolunmi.Bazaar.service.in
+++ b/data/io.github.kolunmi.Bazaar.service.in
@@ -4,5 +4,5 @@ PartOf=graphical-session.target
 
 [Service]
 Type=dbus
-BusName=io.github.kolunmi.bazaar
+BusName=io.github.kolunmi.Bazaar
 ExecStart=@bindir@/bazaar service
