--- a/data/meson.build
+++ b/data/meson.build
@@ -1,6 +1,6 @@
 desktop_file = i18n.merge_file(
-        input: 'io.github.kolunmi.bazaar.desktop.in',
-       output: 'io.github.kolunmi.bazaar.desktop',
+        input: 'io.github.kolunmi.Bazaar.desktop.in',
+       output: 'io.github.kolunmi.Bazaar.desktop',
          type: 'desktop',
        po_dir: '../po',
       install: true,
@@ -13,8 +13,8 @@ if desktop_utils.found()
 endif
 
 appstream_file = i18n.merge_file(
-        input: 'io.github.kolunmi.bazaar.metainfo.xml.in',
-       output: 'io.github.kolunmi.bazaar.metainfo.xml',
+        input: 'io.github.kolunmi.Bazaar.metainfo.xml.in',
+       output: 'io.github.kolunmi.Bazaar.metainfo.xml',
        po_dir: '../po',
       install: true,
   install_dir: get_option('datadir') / 'metainfo'
@@ -24,7 +24,7 @@ appstreamcli = find_program('appstreamcli', required: false, disabler: true)
 test('Validate appstream file', appstreamcli,
      args: ['validate', '--no-net', '--explain', appstream_file])
 
-install_data('io.github.kolunmi.bazaar.gschema.xml',
+install_data('io.github.kolunmi.Bazaar.gschema.xml',
   install_dir: get_option('datadir') / 'glib-2.0' / 'schemas'
 )
 
@@ -33,23 +33,23 @@ test('Validate schema file',
      compile_schemas,
      args: ['--strict', '--dry-run', meson.current_source_dir()])
 
-install_data('io.github.kolunmi.bazaar.service',
+install_data('io.github.kolunmi.Bazaar.service',
   install_dir: get_option('datadir') / 'dbus-1' / 'services'
 )
 
 service_conf = configuration_data()
 service_conf.set('bindir', get_option('prefix') / get_option('bindir'))
 configure_file(
-  input: 'io.github.kolunmi.bazaar.service.in',
-  output: 'io.github.kolunmi.bazaar.service',
+  input: 'io.github.kolunmi.Bazaar.service.in',
+  output: 'io.github.kolunmi.Bazaar.service',
   configuration: service_conf,
   install_dir: get_option('prefix') / 'lib' / 'systemd' / 'user'
 )
 
 service_conf = configuration_data()
 configure_file(
-  input: 'io.github.kolunmi.bazaar.search-provider.ini.in',
-  output: 'io.github.kolunmi.bazaar.search-provider.ini',
+  input: 'io.github.kolunmi.Bazaar.search-provider.ini.in',
+  output: 'io.github.kolunmi.Bazaar.search-provider.ini',
   configuration: service_conf,
   install_dir: get_option('datadir') / 'gnome-shell' / 'search-providers'
 )
