allow future versions of blueprint

--- a/src/meson.build
+++ b/src/meson.build
@@ -87,7 +87,7 @@ blueprints = custom_target('blueprints',
   ),
   output: '.',
   command: [
-    find_program('blueprint-compiler', version: '0.18.0'),
+    find_program('blueprint-compiler', version: '>= 0.18.0'),
     'batch-compile',
     '@OUTPUT@',
     '@CURRENT_SOURCE_DIR@',
