--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -3,15 +3,66 @@
 data/io.github.kolunmi.Bazaar.desktop.in
 data/io.github.kolunmi.Bazaar.gschema.xml
 data/io.github.kolunmi.Bazaar.metainfo.xml.in
+src/bz-addons-dialog.blp
+src/bz-addons-dialog.c
+src/bz-app-tile.blp
+src/bz-app-tile.c
+src/bz-application-map-factory.c
 src/bz-application.c
+src/bz-async-texture.c
+src/bz-backend.c
+src/bz-browse-widget.blp
+src/bz-browse-widget.c
+src/bz-comet-overlay.c
+src/bz-comet.c
+src/bz-content-provider.c
+src/bz-content-section.c
+src/bz-data-graph.c
+src/bz-data-point.c
+src/bz-dynamic-list-view.c
+src/bz-entry-group.c
+src/bz-entry.c
 src/bz-error.c
+src/bz-flathub-category.c
+src/bz-flathub-page.blp
+src/bz-flathub-page.c
+src/bz-flathub-state.c
+src/bz-flatpak-entry.c
+src/bz-flatpak-instance.c
+src/bz-full-view.blp
+src/bz-full-view.c
+src/bz-global-progress.c
+src/bz-global-state.c
+src/bz-gnome-shell-search-provider.c
+src/bz-inhibited-scrollable.c
+src/bz-installed-page.blp
+src/bz-installed-page.c
+src/bz-issue.c
+src/bz-paintable-model.c
 src/bz-preferences-dialog.blp
+src/bz-preferences-dialog.c
+src/bz-progress-bar.blp
+src/bz-progress-bar.c
+src/bz-release.c
+src/bz-review.c
+src/bz-screenshot.c
+src/bz-search-engine.c
 src/bz-search-widget.blp
+src/bz-search-widget.c
+src/bz-section-view.blp
+src/bz-section-view.c
 src/bz-share-dialog.blp
+src/bz-share-dialog.c
+src/bz-stats-dialog.blp
+src/bz-stats-dialog.c
 src/bz-transaction-manager.c
 src/bz-transaction-view.blp
+src/bz-transaction-view.c
 src/bz-transaction.c
 src/bz-update-dialog.blp
-src/bz-window.c
+src/bz-update-dialog.c
+src/bz-url.c
 src/bz-window.blp
+src/bz-window.c
+src/bz-yaml-parser.c
 src/main.c
