feat: Add a comment to the desktop file
This is displayed in KDE when searching for the app

--- a/data/io.github.kolunmi.Bazaar.desktop.in
+++ b/data/io.github.kolunmi.Bazaar.desktop.in
@@ -1,5 +1,6 @@
 [Desktop Entry]
 Name=Bazaar
+Comment=Add, remove or update flatpak software on this computer
 Exec=bazaar window --auto-service
 Icon=io.github.kolunmi.Bazaar
 Terminal=false
