--- a/src/meson.build
+++ b/src/meson.build
@@ -1,3 +1,43 @@
+math = cc.find_library('m', required: false)
+
+
+libdex_opts = [
+  'introspection=disabled',
+]
+
+gtk_dep              = dependency('gtk4')
+libadwaita_dep       = dependency('libadwaita-1', version: '>= 1.7')
+libdex_dep           = dependency('libdex-1', version: '== 0.9.1', default_options: libdex_opts)
+#                                                          ^ any other version causes crashes right now
+flatpak_dep          = dependency('flatpak', version: '>= 1.9')
+appstream_dep        = dependency('appstream', version: '>= 1.0')
+xmlb_dep             = dependency('xmlb', version: '>= 0.3.4')
+yaml_dep             = dependency('yaml-0.1', version: '>= 0.2.5')
+libsoup_dep          = dependency('libsoup-3.0', version: '>= 3.6.0')
+json_glib_dep        = dependency('json-glib-1.0', version: '>= 1.10.0')
+glycin_dep           = dependency('glycin-1', version: '>= 1.0')
+glycin_gtk4_dep      = dependency('glycin-gtk4-1', version: '>= 1.0')
+
+
+dl_worker_sources = [
+  'bz-env.c',
+  'bz-global-state.c',
+  'dl-worker.c',
+]
+
+dl_worker_deps = [
+  math,
+  libdex_dep,
+  libsoup_dep,
+  json_glib_dep,
+]
+
+dl_worker_exe = executable(dl_worker_bin_name, dl_worker_sources,
+  dependencies: dl_worker_deps,
+       install: true,
+)
+
+
 marshalers = gnome.genmarshal('bz-marshalers',
   sources: 'bz-marshalers.list',
   prefix: 'bz_marshal',
@@ -25,7 +65,9 @@ bz_sources = [
   'bz-content-section.c',
   'bz-data-graph.c',
   'bz-data-point.c',
+  'bz-download-worker.c',
   'bz-dynamic-list-view.c',
+  'bz-entry-cache-manager.c',
   'bz-entry-group.c',
   'bz-entry.c',
   'bz-env.c',
@@ -41,17 +83,20 @@ bz_sources = [
   'bz-gnome-shell-search-provider.c',
   'bz-inhibited-scrollable.c',
   'bz-installed-page.c',
+  'bz-io.c',
   'bz-issue.c',
-  'bz-paintable-model.c',
   'bz-preferences-dialog.c',
   'bz-progress-bar.c',
   'bz-release.c',
+  'bz-result.c',
   'bz-review.c',
   'bz-screenshot.c',
   'bz-search-engine.c',
   'bz-search-widget.c',
   'bz-section-view.c',
+  'bz-serializable.c',
   'bz-share-dialog.c',
+  'bz-state-info.c',
   'bz-stats-dialog.c',
   'bz-transaction-manager.c',
   'bz-transaction-view.c',
@@ -64,18 +109,18 @@ bz_sources = [
 ]
 
 bz_deps = [
-  cc.find_library('m', required: false),
-  dependency('gtk4'),
-  dependency('libadwaita-1', version: '>= 1.7'),
-  dependency('libdex-1', version: '>= 0.9'),
-  dependency('flatpak', version: '>= 1.9'),
-  dependency('appstream', version : '>= 1.0'),
-  dependency('xmlb', version : '>= 0.3.4'),
-  dependency('glycin-1', version : '>= 1.0'),
-  dependency('glycin-gtk4-1', version : '>= 1.0'),
-  dependency('yaml-0.1', version : '>= 0.2.5'),
-  dependency('libsoup-3.0', version : '>= 3.6.0'),
-  dependency('json-glib-1.0', version : '>= 1.10.0'),
+  math,
+  gtk_dep,
+  libadwaita_dep,
+  flatpak_dep,
+  appstream_dep,
+  xmlb_dep,
+  yaml_dep,
+  libsoup_dep,
+  json_glib_dep,
+  libdex_dep,
+  glycin_dep,
+  glycin_gtk4_dep,
 ]
 
 blueprints = custom_target('blueprints',
