Add ability to copy screenshots to clipboard and open externally

--- a/src/meson.build
+++ b/src/meson.build
@@ -64,6 +64,7 @@ bz_sources = [
   'bz-content-section.c',
   'bz-data-graph.c',
   'bz-data-point.c',
+  'bz-decorated-screenshot.c',
   'bz-download-worker.c',
   'bz-dynamic-list-view.c',
   'bz-entry-cache-manager.c',
@@ -129,6 +130,7 @@ blueprints = custom_target('blueprints',
     'bz-addons-dialog.blp',
     'bz-app-tile.blp',
     'bz-browse-widget.blp',
+    'bz-decorated-screenshot.blp',
     'bz-flathub-page.blp',
     'bz-full-view.blp',
     'bz-installed-page.blp',
