--- a/meson.build
+++ b/meson.build
@@ -104,7 +104,13 @@ else
   endforeach
   add_project_arguments(project_c_args, language: 'c')
 
+
+  # needed by both bazaar and bazaar-ui
+  gtk_dep = dependency('gtk4')
+
+
   subdir('data')
+  subdir('bazaar-ui')
   subdir('src')
   subdir('po')
 
