--- a/src/meson.build
+++ b/src/meson.build
@@ -5,7 +5,6 @@ libdex_opts = [
   'introspection=disabled',
 ]
 
-gtk_dep              = dependency('gtk4')
 libadwaita_dep       = dependency('libadwaita-1', version: '>= 1.7')
 libdex_dep           = dependency('libdex-1', version: '>= 0.10.0', default_options: libdex_opts)
 flatpak_dep          = dependency('flatpak', version: '>= 1.9')
@@ -111,6 +110,7 @@ bz_sources = [
 ]
 
 bz_deps = [
+  bazaar_ui_dep,
   math,
   gtk_dep,
   libadwaita_dep,
@@ -162,6 +162,6 @@ bz_sources += gnome.compile_resources('bz-resources',
 )
 
 executable('bazaar', bz_sources, gdbus_src, marshalers,
-  dependencies: bz_deps,
-       install: true,
+           dependencies: bz_deps,
+           install: true,
 )
