--- a/bazaar-ui/Cargo.toml
+++ b/bazaar-ui/Cargo.toml
@@ -4,7 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-gtk4 = "0.10.0"
+adw = { version = "0.8.0", package = "libadwaita", features = ["v1_7"] }
+gtk = { version = "0.10.0", package = "gtk4", features = ["v4_18"]}
 
 [lib]
 name = "bazaar_ui"
