refactor: streamline Flatpak CI workflow by removing unnecessary steps

--- a/.github/workflows/build-flatpak.yml
+++ b/.github/workflows/build-flatpak.yml
@@ -1,50 +1,19 @@
-name: Build Flatpak and Upload Artifact
-
 on:
   push:
-    branches:
-      - master
+    branches: [master]
   pull_request:
-    branches:
-      - master
-  workflow_dispatch:
-
+name: CI Build Flatpak
 jobs:
-  build_flatpak:
+  flatpak:
+    name: "Flatpak"
     runs-on: ubuntu-latest
-
+    container:
+      image: ghcr.io/flathub-infra/flatpak-github-actions:gnome-48
+      options: --privileged
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-        with:
-          submodules: true
-
-      - name: Setup Just
-        uses: extractions/setup-just@e33e0265a09d6d736e2ee1e0eb685ef1de4669ff # v3
-
-      - name: Check Just Syntax
-        shell: bash
-        run: |
-          just check
-
-      - name: Install Flatpak and Flatpak Builder
-        run: |
-          sudo apt update
-          sudo apt install -y flatpak flatpak-builder libflatpak-dev
-
-      - name: Build Flatpak
-        id: build-flatpak
-        shell: bash
-        run: |
-          sudo $(command -v just) build-flatpak
-          sudo $(command -v just) build-flatpak-bundle
-
-      - name: Upload Flatpak artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: io.github.kolunmi.Bazaar
-          path: io.github.kolunmi.Bazaar.flatpak
-          retention-days: 14
-
-      - name: Display success message
-        run: echo "Flatpak build and artifact upload complete!"
+    - uses: actions/checkout@v4
+    - uses: flatpak/flatpak-github-actions/flatpak-builder@v6
+      with:
+        bundle: Bazaar.flatpak
+        manifest-path: io.github.kolunmi.Bazaar.yml
+        cache-key: flatpak-builder-${{ github.sha }}
