--- a/.github/workflows/build-flatpak.yml
+++ b/.github/workflows/build-flatpak.yml
@@ -15,5 +15,5 @@ jobs:
     - uses: flatpak/flatpak-github-actions/flatpak-builder@v6
       with:
         bundle: Bazaar.flatpak
-        manifest-path: io.github.kolunmi.Bazaar.yml
+        manifest-path: build-aux/flatpak/io.github.kolunmi.Bazaar.yml
         cache-key: flatpak-builder-${{ github.sha }}
