--- a/.github/workflows/build-flatpak.yml
+++ b/.github/workflows/build-flatpak.yml
@@ -4,6 +4,7 @@ on:
   pull_request:
 name: CI Build Flatpak
 jobs:
+
   flatpak:
     name: "Flatpak"
     runs-on: ubuntu-latest
@@ -12,6 +13,8 @@ jobs:
       options: --privileged
     steps:
     - uses: actions/checkout@v4
+      with:
+        submodules: recursive
     - uses: flatpak/flatpak-github-actions/flatpak-builder@v6
       with:
         bundle: Bazaar.flatpak
