app branding accent colors support

--- a/src/meson.build
+++ b/src/meson.build
@@ -64,6 +64,7 @@ bz_sources = [
   'bz-data-graph.c',
   'bz-data-point.c',
   'bz-decorated-screenshot.c',
+  'bz-detailed-app-tile.c',
   'bz-download-worker.c',
   'bz-dynamic-list-view.c',
   'bz-entry-cache-manager.c',
@@ -81,6 +82,7 @@ bz_sources = [
   'bz-global-progress.c',
   'bz-global-state.c',
   'bz-gnome-shell-search-provider.c',
+  'bz-group-tile-css-watcher.c',
   'bz-inhibited-scrollable.c',
   'bz-inspector.c',
   'bz-installed-page.c',
@@ -133,6 +135,7 @@ blueprints = custom_target('blueprints',
     'bz-app-tile.blp',
     'bz-browse-widget.blp',
     'bz-decorated-screenshot.blp',
+    'bz-detailed-app-tile.blp',
     'bz-entry-inspector.blp',
     'bz-flathub-page.blp',
     'bz-full-view.blp',
