Add Flathub Categories

--- a/src/meson.build
+++ b/src/meson.build
@@ -57,6 +57,7 @@ bz_sources = [
   'bz-async-texture.c',
   'bz-backend.c',
   'bz-browse-widget.c',
+  'bz-category-dialog.c',
   'bz-comet-overlay.c',
   'bz-comet.c',
   'bz-content-provider.c',
@@ -134,6 +135,7 @@ blueprints = custom_target('blueprints',
     'bz-addons-dialog.blp',
     'bz-app-tile.blp',
     'bz-browse-widget.blp',
+    'bz-category-dialog.blp',
     'bz-decorated-screenshot.blp',
     'bz-detailed-app-tile.blp',
     'bz-entry-inspector.blp',
