--- a/data/io.github.kolunmi.Bazaar.metainfo.xml.in
+++ b/data/io.github.kolunmi.Bazaar.metainfo.xml.in
@@ -59,6 +59,12 @@
   </screenshots>
 
   <releases>
+    <release version="0.4.6" date="2025-09-05">
+      <url type="details">https://github.com/kolunmi/bazaar/releases/tag/v0.4.6</url>
+    </release>
+    <release version="0.4.5" date="2025-09-01">
+      <url type="details">https://github.com/kolunmi/bazaar/releases/tag/v0.4.5</url>
+    </release>
     <release version="0.4.4" date="2025-08-30">
       <url type="details">https://github.com/kolunmi/bazaar/releases/tag/v0.4.4</url>
     </release>
